syntax = "proto3";

package user;


service UserService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {};
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse) {};
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse) {};
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
}

message Image {
  string url =1;
  string name=2;
}

message User {
  string _id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  int32 location = 5;
  int32 state = 6;
  int32 gender = 7;
  string role = 8;
  int32 followeeCount = 9;
  int32 followerCount = 10;
  string createdAt = 11;
  string updatedAt = 12;
  string status = 13;
  bool isOnline = 14;
  Image image = 15;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users =1;
}

message GetUserRequest {
  string userId =1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string userId =1;
  User user = 2;
}

message UpdateUserResponse {
  User user = 2;
}

message BlockUserRequest {
  string userId = 1;
}

message BlockUserResponse {
  string userId=1;
}

message UnblockUserRequest {
  string userId = 1;
}

message UnblockUserResponse {
  string userId=1;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {
  string userId = 1;
}